# Chess

./: .gitignore  CMakeLists.txt
dependencies/Glad/include/glad/: glad.h
dependencies/Glad/src/: glad.c
src/: Main.cpp
src/game/: Game.cpp  Game.h  GameState.cpp
src/game/calculations/: Engine.cpp  Engine.h
src/game/helpers/: BitboardHelpers.h  ChessPosition.cpp  ChessPosition.h  Color.h  Move.h  Piece.h
src/resources/shader/: Shaders.cpp  Shaders.h
src/resources/shader/shaders/: BasicShader.glsl  TriangleRed.shader
